...
            <group android:id="@+id/exit">
                <item android:id="@+id/action_file_exit" android:title="@string/action_file_exit"/>
            </group>

        </menu>
    </item>
        <item android:id="@+id/action_view"
          android:title="@string/action_view"
          app:showAsAction="never">
        <menu>
            <group android:id="@+id/view_items">
                <item android:id="@+id/action_trip"
                      android:title="@string/action_trip"/>
                <item android:id="@+id/action_table"
                      android:title="@string/action_table"
                      tools:ignore="DuplicateIds"/>
                <item android:id="@+id/action_plan"
                      android:title="@string/action_plan"
...
