<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/rootLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".control.activity.TripActivity">

    <com.google.android.material.appbar.AppBarLayout
...
                        android:layout_marginBottom="8dp"
                        android:hint="@string/trip_licence_label"
                        app:helperTextEnabled="true"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/trip_licence"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                            android:maxLines="1"
                            android:inputType="text"
                            android:completionThreshold="0"/>
...
